--- a/Cắt form pet/style.css
+++ b/Cắt form pet/style.css
@@ -1,175 +1,180 @@
 * {
   margin: 0;
   padding: 0;
-  font-family: Arial, sans-serif;
-}
-
-body {
-  background-color: #D9AA96;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-  font-family: 'Montserrat', sans-serif;
-  height: 100vh;
-  margin: -20px 0 50px;
-}
-
-.container {
-  width: 1000px;
-  height: 560px;
-  display: flex;
-  justify-content: center;
-  margin: 100px auto;
-}
-
-.left_col {
-  width: 400px;
-  background-color: #807282;
-  text-align: center;
-  padding-top: 50px;
-  position: relative;
-}
-
-.left_col .fa-paw {
-  border: 1px solid #807282;
-  background-color: #F8C7C1;
-  font-size: 35px;
-  padding: 10px;
-  border-radius: 50%;
-  transform: rotate(-45deg);
-  color: #807282;
-}
-
-.left_col > h1 {
-  font-weight: 700;
-  font-size: 24px;
-}
-.left_col > img {
-  width: 70%;
-  position: absolute;
-  bottom: 0;
-  left: 60px;
-  filter: opacity(70%);
-}
-
-.right_col {
-  width: 600px;
-  background-color: #F8C7C1;
-  padding: 50px 70px 0 70px;
   box-sizing: border-box;
+}
+body {
+  background: #d8a997;
+}
+.clearfix {
+  clear: both;
+}
+.container {
+  width: 100%;
+}
+.content {
+  width: 920px;
+  height: 500px;
+  background-color: green;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%,-50%);
+}
+/* bat dau css content-left */
+.content-left {
+  width: 40%;
+  height: 100%;
+  float: left;
+  background: #7f7182;
+  position: absolute;
+}
+.content-left .brand {
+  padding-top: 40px;
+  text-align: center;
+}
+.content-left .brand i{
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  background: #f8b3a8;
+  color: #9d7279;
+  font-size: 30px;
+  transform: rotate(-45deg);
+  text-align: center;
+  line-height: 50px;
+}
+.content-left .brand  span {
+  font-size: 30px;
+  font-weight: bold;
+  padding-left: 20px;
+}
+.content-left img {
+  display: block;
+  position: absolute;
+  width: 200px;
+  bottom: 0;
+  left: 50%;
+  transform: translateX(-50%);
+}
+/* bat dau css content-right */
+.content-right {
+  width: 60%;
+  height: 100%;
+  background: #fac7c3;
+  float: right;
   position: relative;
 }
-
-.right_col header h1 {
-  font-weight: 700;
-  font-size: 30px;
+.content-right .title-right {
+  width: 80%;
+  margin: 0 auto;
+  margin-top: 45px;
   margin-bottom: 15px;
 }
-
-.item {
-  display: flex;
-  justify-content: space-between;
-  margin-bottom: 10px;
+.content-right .title-right p {
+  font-size: 30px;
+  font-weight: bold;
 }
-
-[for^="pets"] {
-  display: block;
-  line-height: 1.8rem;
-  font-weight: 100;
-  opacity: 0.7;
+.content-right .form-content {
+  width: 80%;
+  margin: 0 auto;
 }
-
-input[type="text"] {
-  height:35px;
-  width: 160px;
-  padding-left: 10px;
-  border: 1px solid rgb(206, 195, 195);
-}
-
-.pet-photo {
-  padding-top: 13px;
-}
-
-.pet-photo button {
-  border: none;
-  background-color: #F8C7C1;
-  padding-right: 12px;
-}
-
-.pet-photo label {
-  font-weight: 100;
-  opacity: 0.7;
-}
-
-.pet-photo .fa-camera-retro {
-  border: none;
-  background-color: white;
-  font-size: 24px;
-  border-radius: 50%;
-  padding: 10px;
-}
-
-.pets-weight label {
-  display: block;
-}
-
-.pets-weight .choice {
-  width: 100%;
-  display: flex;
-  justify-content: space-between;
-}
-
-.choice {
-  background-color: white;
-  display: inline-block;
-  border: 1px solid transparent;
+.form-content input {
+  outline: none;
+  width: 175px;
+  height: 30px;
+  border: 1px solid whitesmoke;
   border-radius: 5px;
-  box-sizing: border-box;
-  padding: 5px;
+  margin-bottom: 10px;
+  margin-top: 5px;
 }
-
-.choice input[type="radio"] {
+.form-content label.title-form {
+  color: #714640;
+}
+.form-content .form-content-left {
+  width: 40%;
+  float: left;
+}
+.form-content .form-content-right {
+  width: 40%;
+  float: right;
+}
+.form-content-right .upload {
+  margin-top: -20px;
+  margin-bottom: 20px;
+}
+input[type="file"] {
   display: none;
 }
-
-.choice input[type="radio"]:checked + label {
-  background-color: #F8B1AB;
+.upload label.camera-icon {
+  padding: 0;
 }
-
-.choice label {
-  background-color: transparent;
-  border: 1px solid transparent;
-  border-radius: 3px;
-  display: inline-block;
-  text-align: center;
-  width: 80px;
-  height: 25px;
-  line-height: 30px;
-  opacity: 1;
+.upload label.camera-icon i{
+  font-size: 25px;
+  padding: 10px;
+  background: white;
+  border-radius: 50%;
+  color: black;
 }
-
-footer {
-  background-color: white;
-  width: 600px;
-  height: calc(15/100*560px);
-  position: absolute;
-  bottom: 0;
-  right: 0;
+.form-radio-content {
+  width: 175px;
+  height: 30px;
+  background: white;
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
   align-items: center;
+  border-radius: 5px;
+  border: 1px solid whitesmoke;
+  margin-top: 5px;
 }
-
-footer button {
-  height: 40px;
-  width: 100px;
-  border: 1px solid rgb(201, 195, 195);
-  border-radius: 30px;
-  background-color: transparent;
+.form-radio-content input {
+  display: none;
 }
-
-#next {
-  background-color: #807282;
+.form-radio-content label {
+  width: 80px;
+  text-align: center;
+  border-radius: 5px;
+  padding-top: 3px;
+  padding-bottom: 3px;
+  cursor: pointer;
+  border: 2px solid white;
+  color: #714640;
+}
+.form-input:checked + .form-label {
+  background: #fbb2ac;
+}
+.form-content-full .form-weight {
+  margin-top: 10px;
+  margin-bottom: 50px;
+}
+.form-weight .form-radio-content {
+  width: 100%;
+}
+/* tao css direc */
+.direc {
+  width: 100%;
+  height: 80px;
+  background: white;
+  position: absolute;
+}
+.direc .btn {
+  width: 80%;
+  margin: 0 auto;
+  position: relative;
+  top: 50%;
+  transform: translateY(-50%);
+}
+.direc .btn button {
+  padding: 10px 30px;
+  border-radius: 20px;
+  outline: none;
+  border: 1px solid gray;
+  background: white;
+}
+.direc .btn button:hover {
+  background: #817083;
   color: white;
+}
+.direc .btn button:nth-child(2) {
+  float: right;
 }
